<resources>
    <string name="font_roboto_condensed">sans-serif-black</string>
    <string name="font_roboto_condensed_light">sans-serif-light</string>
    <string name="all_about">About</string>
    <string name="all_agree">Agree</string>
    <string name="all_calculating">Calculating</string>
    <string name="all_calibrate">Calibrate</string>
    <string name="all_calibration">Calibration</string>
    <string name="all_camera">Camera</string>
    <string name="all_cancel">Cancel</string>
    <string name="all_complete">Complete</string>
    <string name="all_close">Close</string>
    <string name="all_confirm">Confirm</string>
    <string name="all_congratulations">Congratulations</string>
    <string name="all_connect">Connect</string>
    <string name="all_continue">Continue</string>
    <string name="all_control">Control</string>
    <string name="all_delete">Delete</string>
    <string name="all_disconnect">Disconnect</string>
    <string name="all_done">Done</string>
    <string name="all_down">Down</string>
    <string name="all_download">Download</string>
    <string name="all_edit">Edit</string>
    <string name="all_enclosure">Enclosure</string>
    <string name="all_experiment">Experiment</string>
    <string name="all_factory">Factory</string>
    <string name="all_failed">Failed</string>
    <string name="all_finish">Finish</string>
    <string name="all_general">General</string>
    <string name="all_guides">Guides</string>
    <string name="all_hello">Hello</string>
    <string name="all_language">Language</string>
    <string name="all_load">Load</string>
    <string name="all_loading">Loading...</string>
    <string name="all_local">Local</string>
    <string name="all_move">Move</string>
    <string name="all_next">Next</string>
    <string name="all_no">No</string>
    <string name="all_notification">Notification</string>
    <string name="all_on">On</string>
    <string name="all_off">Off</string>
    <string name="all_ok">OK</string>
    <string name="all_pause">Pause</string>
    <string name="all_preview">Preview</string>
    <string name="all_print">Print</string>
    <string name="all_ready">Ready</string>
    <string name="all_reconnect">Reconnect</string>
    <string name="all_recover">Recover</string>
    <string name="all_refuse">Refuse</string>
    <string name="all_rename">Rename</string>
    <string name="all_resume">Resume</string>
    <string name="all_return">Return</string>
    <string name="all_offset">Offset</string>
    <string name="all_save">Save</string>
    <string name="all_settings">Settings</string>
    <string name="all_skip">Skip</string>
    <string name="all_space">Space</string>
    <string name="all_start">Start</string>
    <string name="all_stop">Stop</string>
    <string name="all_unload">Unload</string>
    <string name="all_up">Up</string>
    <string name="all_update">Update</string>
    <string name="all_warning">Warning</string>
    <string name="all_wifi">Wi-Fi</string>
    <string name="all_yes">Yes</string>
    <string name="all_retry">Retry</string>
    <string name="all_quit">Quit</string>
    <string name="all_capture">Capture</string>
    <string name="all_measure">Measure</string>
    <string name="all_tool">Tool</string>
    <string name="all_restart">Restart</string>
    <string name="all_tool_head_unknown">Unknown</string>
    <string name="all_tool_head_3dp">Single Extrusion Module</string>
    <string name="all_tool_head_dual_extruder">Dual Extrusion Module</string>
    <string name="all_tool_head_cnc">50W CNC Module</string>
    <string name="all_tool_head_cnc_200w">200W CNC Module</string>
    <string name="all_tool_head_laser">1600mW Laser Module</string>
    <string name="all_tool_head_laser_10w">10W Laser Module</string>
    <string name="all_tool_head_laser_20w">20W Laser Module</string>
    <string name="all_tool_head_laser_40w">40W Laser Module</string>
    <string name="all_tool_head_laser_2w_infrared">2W Infrared Laser Module</string>
    <string name="all_laser_height">Laser Height</string>
    <string name="all_rotary_module">Rotary Module</string>
    <string name="all_linear_module">Linear Module</string>
    <string name="all_linear_module_x_title">X-axis Linear Module</string>
    <string name="all_linear_module_y1_title">Linear Module Y1</string>
    <string name="all_linear_module_z1_title">Linear Module Z1</string>
    <string name="all_linear_module_y2_title">Linear Module Y2</string>
    <string name="all_linear_module_z2_title">Linear Module Z2</string>
    <string name="all_emergency_stop">Emergency Stop</string>
    <string name="all_safety_goggles">Safety Goggles</string>
    <string name="all_air_purifier">Air Purifier</string>
    <string name="all_dry_box_module">Dry Box</string>
    <string name="number_0_1">0.1</string>
    <string name="number_0_3">0.3</string>
    <string name="number_1">1</string>
    <string name="number_3">3</string>
    <string name="number_10">10</string>
    <string name="all_0">0</string>
    <string name="all_0_00">0.00</string>
    <string name="all_0_000">0.000</string>
    <string name="all_1">1</string>
    <string name="all_2">2</string>
    <string name="all_3">3</string>
    <string name="all_4">4</string>
    <string name="all_5">5</string>
    <string name="all_6">6</string>
    <string name="all_7">7</string>
    <string name="all_8">8</string>
    <string name="all_9">9</string>
    <string name="all_0_01mm">0.01 mm</string>
    <string name="all_0_02mm">0.02 mm</string>
    <string name="all_0_05mm">0.05 mm</string>
    <string name="all_0_1mm">0.1 mm</string>
    <string name="all_0_2mm">0.2 mm</string>
    <string name="all_0_3mm">0.3 mm</string>
    <string name="all_0_5mm">0.5 mm</string>
    <string name="all_1mm">1 mm</string>
    <string name="all_5mm">5 mm</string>
    <string name="all_10mm">10 mm</string>
    <string name="all_100mm">100 mm</string>
    <string name="all_0_2degree">0.2°</string>
    <string name="all_1degree">1°</string>
    <string name="all_5degree">5°</string>
    <string name="all_10degree">10°</string>
    <string name="all_90degree">90°</string>
    <string name="all_unit_mm">&#160;mm</string>
    <string name="all_unit_mm_with_space">&#160;mm</string>
    <string name="all_feedrate_unit">mm/min</string>
    <string name="all_unit_temperature">°C</string>
    <string name="all_unit_percentage">%</string>
    <string name="all_unit_rpm">RPM</string>
    <string name="all_slash">/</string>
    <string name="all_format_float">%.1f</string>
    <string name="all_format_int">%d</string>
    <string name="all_unit_degree">°C</string>
    <string name="all_unit_gram">&#160;g</string>
    <string name="all_unit_mb">&#160;MB</string>
    <string name="all_unit_meter">&#160;m</string>
    <string name="all_format_centigrade">%d℃</string>
    <string name="all_format_percentage">%d%%</string>
    <string name="all_spindle_speed_unit">rpm</string>
    <string name="app_name">FabScreen</string>
    <string name="todo">TODO</string>
    <string name="debug">debug</string>
    <string name="placeholder">placeholder</string>
    <string name="placeholder_long">Placeholder-Placeholder-Placeholder-123</string>
    <string name="placeholder_multiline">Placeholder\nPlaceholder\nPlaceholder</string>
    <string name="all_touch_material_title">Touch Material</string>
    <string name="all_manual_mode">Manual Mode</string>
    <string name="error_configuration">Please configure your serial port first.</string>
    <string name="error_security">You do not have read/write permission to the serial port.</string>
    <string name="error_unknown">The serial port can not be opened for an unknown reason.</string>
    <string name="all_move_show">The machine is moving...</string>
    <string name="all_move_show_content">Please wait a few seconds.\nIf any emergency occurs, press the emergency stop button immediately.</string>
    <string name="all_tip_parse_file_loading">Parsing the file...</string>
    <string name="a400_system_dialog_warning_machine_is_busy_title">The machine is running other operations</string>
    <string name="a400_system_dialog_warning_machine_is_busy_content">Please wait for the machine to complete the current operation and try again</string>
    <string name="a400_dialog_boot_up_outdated_module_update_notiication_title">Outdated module firmware detected</string>
    <string name="a400_dialog_boot_up_outdated_module_update_notiication_content">To update the outdated module firmware, please tab <b>Update</b> to continue.</string>
    <string name="a400_error_controller_tool_head_not_detected_title">Toolhead Not Detected</string>
    <string name="a400_error_controller_tool_head_not_detected_content">
        Please power off the machine, plug the toolhead into the Controller, and restart.
        \nIf the problem persists, contact our Support for help.
    </string>
    <string name="a400_error_controller_mainboard_overheated_title">Controller Overheat</string>
    <string name="a400_boot_up_laser_password_title">Laser Password</string>
    <string name="a400_boot_up_laser_password_desc">To ensure safety, you need to enter the laser password when using the laser function.\n
        \n<b>The initial password is the verification code</b> of your machine, which can be found at the bottom of the Integrated Controller.
    </string>
    <string name="a400_boot_up_laser_password_tap_to_enter">Tap to Enter</string>
    <string name="guide_3dp_safety_instructions_content">
      ● Do not touch the nozzle or heated bed while the machine is printing or heating.
    \n● Always unplug the machine before performing maintenance or modifications.
    </string>
    <string name="guide_3dp_calibration_content">
    The 3D Printing Module will automatically probe and obtain data for specific points on the Heated Bed. You only need to manually calibrate the last point by adjusting the Z Offset.
    </string>
    <string name="guide_laser_calibration_intro_title">Manually Calibrate the Focal Length</string>
    <string name="guide_laser_calibration_intro_content">This guide will walk you through calibrating focal length to produce the best results.</string>
    <string name="guide_laser_calibration_intro_step_title">Steps</string>
    <string name="guide_laser_calibration_intro_step_content">
      ● Input material dimensions
    \n● Fix material
    \n● Confirm height of material\'s top surface
    \n● Machine engraves a few lines
    \n● Choose the thinnest line and confirm focal length
    </string>
    <string name="guide_cnc_get_started">Get Started</string>
    <string name="guide_cnc_safety_instructions">Safety Instructions</string>
    <string name="guide_cnc_safety_instructions_content">
      ● Age Recommendation: experienced users and users aged 18 and above.
    \n● Put the machine into an enclosure or wear the CNC Safety Goggles.
    \n● Always have the material securely clamped.
    \n● Do not touch the bit or collet immediately after use.
    \n● Always disconnect the machine from power before performing maintenance or modifications.
    </string>
    <string name="preview_auto_measure_thickness_succeed_title">Successful</string>
    <string name="preview_auto_measure_thickness_succeed_desc">
        The material thickness is <b>%s</b> mm. The machine will do automatic focusing.
    </string>
    <string name="calibration_intro_calibrate_the_bed">Calibrate the Bed</string>
    <string name="laser_calibration_select_mode">Select a Method</string>
    <string name="laser_calibration_auto_focus">Auto Focus</string>
    <string name="laser_calibration_manual_focus">Manual Focus</string>
    <string name="laser_camera_light_desc">When toggled on, the machine will turn on the camera light automatically during <b>Laser Calibration</b> or <b>Camera Calibration</b>.</string>
</resources>