<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_a400_laser_password_fullscreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_round_grey"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_marginStart="240dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="240dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:contentDescription="@string/placeholder"
            android:src="@drawable/ic_laser_light_active" />

        <TextView
            android:id="@+id/tv_laser_password_title"
            style="@style/AppTheme.TextTitlePrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/a400_boot_up_laser_password_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_laser_password_desc"
            style="@style/AppTheme.TextBody1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/a400_boot_up_laser_password_desc"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/tv_laser_password_tips"
            style="@style/AppTheme.TextBody2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            tools:text="@string/laser_camera_light_desc"
            android:textAlignment="textStart"
            android:visibility="gone" />

        <View
            android:id="@+id/v_divider_drop_shadow"
            style="@style/AppTheme.LineDropShadow"
            android:layout_width="match_parent"
            android:layout_marginTop="100dp" />

        <TextView
            android:id="@+id/tv_a400_laser_password_tap_to_enter"
            style="@style/AppTheme.TextBody1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/margin_layout_32"
            android:paddingBottom="@dimen/margin_layout_32"
            android:text="@string/a400_boot_up_laser_password_tap_to_enter"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/select_dialog_blue_txt" />
    </LinearLayout>

</RelativeLayout>
