<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_theme_background"
    android:clickable="true"
    android:focusable="true">

    <include layout="@layout/widget_top_bar_back_only" />

    <RelativeLayout
        android:id="@+id/view_guide_laser_calibration_intro_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar">

        <TextView
            android:id="@+id/tv_guide_laser_calibration_intro_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_layout_20"
            android:layout_marginTop="@dimen/margin_layout_20"
            android:layout_marginEnd="@dimen/margin_layout_20"
            android:fontFamily="@string/font_roboto_condensed"
            android:text="@string/guide_laser_calibration_intro_title"
            android:textAlignment="textStart"
            android:textColor="@color/default_theme_title"
            android:textSize="@dimen/font_size_h2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_guide_laser_calibration_intro_title"
            android:layout_marginStart="@dimen/margin_layout_20"
            android:layout_marginTop="@dimen/margin_layout_10"
            android:layout_marginEnd="@dimen/margin_layout_20"
            android:text="@string/guide_laser_calibration_intro_content"
            android:textColor="@color/default_theme_desc1"
            android:textSize="@dimen/font_size_h5" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_layout_40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_guide_laser_calibration_intro_title">

        <TextView
            android:id="@+id/tv_guide_laser_calibration_intro_step_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_layout_20"
            android:layout_marginTop="@dimen/margin_layout_10"
            android:layout_marginEnd="@dimen/margin_layout_20"
            android:text="@string/guide_laser_calibration_intro_step_title"
            android:textAlignment="textStart"
            android:textColor="@color/default_theme_title"
            android:textSize="@dimen/font_size_h3"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_guide_laser_calibration_intro_step_title"
            android:layout_marginStart="@dimen/margin_layout_20"
            android:layout_marginTop="@dimen/margin_layout_10"
            android:layout_marginEnd="@dimen/margin_layout_20"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/guide_laser_calibration_intro_step_content"
            android:textAlignment="textStart"
            android:textSize="@dimen/font_size_h5" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_guide_laser_calibration_intro_get_started"
            style="@style/AppTheme.Button.BlueButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_button_45"
            android:layout_marginStart="@dimen/margin_layout_20"
            android:layout_marginTop="@dimen/margin_layout_10"
            android:layout_marginEnd="@dimen/margin_layout_20"
            android:layout_marginBottom="@dimen/margin_layout_10"
            android:text="@string/guide_cnc_get_started" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
