<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_theme_background"
    android:clickable="true"
    android:focusable="true">

    <include layout="@layout/widget_top_bar" />

    <ImageView
        android:id="@+id/iv_laser_calibration_cover"
        android:layout_width="240dp"
        android:layout_height="160dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="@dimen/margin_layout_10"
        android:contentDescription="@string/placeholder"
        android:scaleType="centerCrop"
        android:src="@drawable/pic_laser_calibration_cover_240x160" />

    <TextView
        android:id="@+id/tv_laser_calibration_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_laser_calibration_cover"
        android:layout_marginStart="@dimen/margin_layout_40"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_layout_5"
        android:layout_marginEnd="@dimen/margin_layout_40"
        android:layout_marginBottom="@dimen/margin_layout_20"
        android:text="@string/laser_calibration_select_mode"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/default_theme_title"
        android:textSize="@dimen/font_size_h3"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_laser_calibration_title"
        android:layout_marginTop="@dimen/margin_layout_10"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_laser_calibration_auto_mode"
            style="@style/AppTheme.Button.BlueButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_button_45"
            android:layout_marginStart="@dimen/margin_layout_40"
            android:layout_marginEnd="@dimen/margin_layout_40"
            android:text="@string/laser_calibration_auto_focus" />

        <Button
            android:id="@+id/btn_laser_calibration_jog_mode"
            style="@style/AppTheme.Button.DefaultButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_button_45"
            android:layout_marginStart="@dimen/margin_layout_40"
            android:layout_marginTop="@dimen/margin_layout_10"
            android:layout_marginEnd="@dimen/margin_layout_40"
            android:text="@string/laser_calibration_manual_focus" />
    </LinearLayout>

</RelativeLayout>