<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_theme_background"
    android:clickable="true"
    android:focusable="true">

    <RelativeLayout
        android:id="@+id/view_guide_intro_cover"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_guide_intro_cover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/todo" />

    </RelativeLayout>

    <fabscreen.platform.core.ui.view.GuideProgressBar
        android:id="@+id/view_guide_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_5"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_guide_intro_cover" />

    <include layout="@layout/widget_top_bar_back_only" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_layout_40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_guide_progress_bar">

        <TextView
            android:id="@+id/tv_guide_intro_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@string/font_roboto_condensed"
            android:text="@string/calibration_intro_calibrate_the_bed"
            android:textAlignment="center"
            android:textColor="@color/default_theme_title"
            android:textSize="@dimen/font_size_h3" />

        <TextView
            android:id="@+id/tv_guide_intro_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_guide_intro_title"
            android:layout_marginStart="@dimen/margin_layout_20"
            android:layout_marginTop="@dimen/margin_layout_10"
            android:layout_marginEnd="@dimen/margin_layout_20"
            android:text="@string/guide_3dp_calibration_content"
            android:textAlignment="center"
            android:textColor="@color/default_theme_desc1"
            android:textSize="@dimen/font_size_h5" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/default_theme_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_guide_intro_next"
            style="@style/AppTheme.Button.BlueButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_button_45"
            android:layout_marginStart="@dimen/margin_layout_20"
            android:layout_marginTop="@dimen/margin_layout_10"
            android:layout_marginEnd="@dimen/margin_layout_20"
            android:layout_marginBottom="@dimen/margin_layout_10"
            android:text="@string/all_next" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
