<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_theme_background"
    android:clickable="true"
    android:focusable="true">

    <include layout="@layout/widget_top_bar_back_only" />

    <RelativeLayout
        android:id="@+id/view_guide_cnc_get_started_logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/height_button_70"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_guide_cnc_start_logo"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_marginStart="@dimen/margin_layout_40"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_file_preview_cnc_120x120" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_guide_cnc_get_started_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_layout_20"
        android:layout_marginTop="@dimen/margin_layout_40"
        android:ellipsize="end"
        android:fontFamily="@string/font_roboto_condensed_light"
        android:singleLine="true"
        android:text="@string/guide_cnc_safety_instructions"
        android:textColor="@color/default_theme_title"
        android:textSize="@dimen/font_size_h2"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_guide_cnc_get_started_logo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_marginTop="@dimen/margin_layout_10"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/view_guide_cnc_get_started_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_guide_cnc_get_started_title">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_layout_20"
            android:layout_marginEnd="@dimen/margin_layout_20"
            android:lineSpacingExtra="2dp"
            android:text="@string/guide_cnc_safety_instructions_content"
            android:textColor="@color/default_theme_desc1"
            android:textSize="@dimen/font_size_h5" />
    </ScrollView>


    <RelativeLayout
        android:id="@+id/view_guide_cnc_get_started_buttons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_guide_cnc_get_started_next"
            style="@style/AppTheme.Button.BlueButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_button_45"
            android:layout_marginStart="@dimen/margin_layout_20"
            android:layout_marginTop="@dimen/margin_layout_10"
            android:layout_marginEnd="@dimen/margin_layout_20"
            android:layout_marginBottom="@dimen/margin_layout_10"
            android:text="@string/guide_cnc_get_started" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>