<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/widget_top_bar_back_only" />

    <ImageView
        android:layout_width="240dp"
        android:layout_height="160dp"
        android:layout_marginTop="@dimen/margin_layout_32"
        android:src="@drawable/pic_laser_10w_settings_thickness_180x180" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_layout_20"
        android:layout_marginTop="@dimen/margin_layout_10"
        android:layout_marginEnd="@dimen/margin_layout_20"
        android:gravity="center_horizontal"
        android:textColor="@color/custom_grey_200"
        android:textSize="@dimen/font_size_h3"
        android:textStyle="bold"
        android:text="@string/preview_auto_measure_thickness_succeed_title" />

    <TextView
        android:id="@+id/tv_measure_succeed_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_layout_20"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="@dimen/margin_layout_20"
        android:gravity="center_horizontal"
        tools:text="@string/preview_auto_measure_thickness_succeed_desc"
        android:textColor="@color/custom_grey_200"
        android:textSize="@dimen/font_size_h5" />

    <Button
        android:id="@+id/btn_measure_succeed_next"
        style="@style/AppTheme.Button.BlueButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button_45"
        android:layout_marginStart="@dimen/margin_layout_40"
        android:layout_marginTop="@dimen/margin_layout_50"
        android:layout_marginEnd="@dimen/margin_layout_40"
        android:text="@string/all_next" />
</LinearLayout>